...
  }, [isAuthenticated]);

  const handleEmailChange = (value: string) => {
    setEmail(value);
    setEmailError(
      value.length > 0 && !UCALDAS_REGEX.test(value)
        ? "Debe ser un correo @ucaldas.edu.co"
        : "",
    );
  };

  const handleLogin = async () => {
    setFormError("");
...
